testsuite/tests/vdq-rta/should_fail/T22326_fail_n_args.stderr

T22326_fail_n_args.hs:6:1: error: [GHC-25897]
    • Couldn't match expected type ‘b’ with actual type ‘p0 -> a0’
      ‘b’ is a rigid type variable bound by
        a type expected by the context:
          forall b -> b
        at T22326_fail_n_args.hs:6:1-26
    • The equation for ‘f’ has three value arguments,
        but its type ‘a -> forall b -> b’ has only two
